# tax-engine

./: .gitignore  AGENTS.md  ARCH.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DE_MARRIED_SEPARATE.md  DE_US_CAPITAL_GAINS.md  ENGINE-RESTRUCTURE-PLAN.md  ENGINE-SPEC.md  FREELANCER-DE-EUER-SLICE-SPEC.md  FREELANCER-DE-VORSORGE-SLICE-SPEC.md  FREELANCER-SUPPORT-SPEC.md  FREELANCER-US-SCHEDULE-C-SLICE-SPEC.md  JSTG-2024-KAP-INVENTORY.md  LOCK.md  MIGRATION.md  Makefile  README.md  local_backend.py  pyproject.toml
.audit/: hashes.toml
docs/: intake-wizard-coverage-todo.md  invariant-migration-plan.md  jurisdiction-schema-boundaries.md  law-coverage.md  parser-contributor-guide.md  provider-support.md  support-matrix.md  usability-standards.md
law/: audit.py
law/_utils/: constants.py  money.py
tax_pipeline/: __init__.py  _law_data.py  analysis_inputs.py  classify.py  demo_workspace.py  fact_extraction.py  fact_validation.py  fund_classification_data.py  intake_app.py  jurisdictions.py  manifest.py  migrate_buckets.py  paths.py  pipeline_context.py  profile.py  run_year.py  scaffold_year.py  treaties.py  validate_workspace.py  year_registry.py  year_runtime.py
tax_pipeline/core/: __init__.py  assessment.py  facts.py  io.py  legal_value.py  money.py  narrative.py  stage_id.py  stages.py
tax_pipeline/data/: german_fund_classification.csv
tax_pipeline/derivation/: __init__.py  persistence.py  runtime.py
tax_pipeline/forms/: __init__.py  _schema.py  common.py  filing_guide.py  (+2 more)
tests/: __init__.py  _germany_derived_facts.py  generated_demo.py
years/: README.md
(+631 files in other folders)
